--- a/app/src/main/res/layout/adapter_todo_item.xml
+++ b/app/src/main/res/layout/adapter_todo_item.xml
@@ -1,12 +1,43 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v7.widget.CardView
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:elevation="1dp"
+    android:layout_margin="6dp">
 
-    <TextView
-        android:text="TextView"
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/adapter_todo_item_TitleTextView" />
-</LinearLayout>
+        android:layout_height="match_parent"
+        android:padding="6dp">
+
+        <TextView
+            android:text="TextView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/adapter_todo_item_TitleTextView"
+            style="@style/TextAppearance.AppCompat.Medium" />
+
+        <TextView
+            android:text="TextView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/adapter_todo_item_DescriptionTextView"
+            style="@style/TextAppearance.AppCompat.Small"
+            android:layout_marginTop="12dp"
+            android:layout_below="@+id/adapter_todo_item_TitleTextView"
+            android:layout_centerHorizontal="true" />
+
+        <TextView
+            android:text="TextView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/adapter_todo_item_StatusTextView"
+            style="@style/TextAppearance.AppCompat.Small"
+            android:layout_below="@+id/adapter_todo_item_DescriptionTextView"
+            android:layout_alignParentStart="true"
+            android:layout_marginTop="10dp" />
+
+    </RelativeLayout>
+</android.support.v7.widget.CardView>
