--- a/app/src/main/res/layout/fragment_todo_list.xml
+++ b/app/src/main/res/layout/fragment_todo_list.xml
@@ -8,7 +8,12 @@
         android:text="TextView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/textView2" />
+        android:id="@+id/textView2"
+        android:textAlignment="center"
+        style="@style/TextAppearance.AppCompat.Medium"
+        android:textColor="#727fe6"
+        android:padding="6dp"
+        />
 
     <android.support.v7.widget.RecyclerView
         android:layout_width="match_parent"
