--- a/app/src/main/res/layout/adapter_todo_item.xml
+++ b/app/src/main/res/layout/adapter_todo_item.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v7.widget.CardView
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -10,14 +11,15 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:padding="6dp">
+        android:padding="8dp">
 
         <TextView
             android:text="TextView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:id="@+id/adapter_todo_item_TitleTextView"
-            style="@style/TextAppearance.AppCompat.Medium" />
+            style="@style/TextAppearance.AppCompat.Medium"
+            android:layout_toStartOf="@+id/adapter_todo_item_DeleteImageView" />
 
         <TextView
             android:text="TextView"
@@ -38,6 +40,15 @@
             android:layout_below="@+id/adapter_todo_item_DescriptionTextView"
             android:layout_alignParentStart="true"
             android:layout_marginTop="10dp" />
+
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:srcCompat="@android:drawable/ic_menu_delete"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentEnd="true"
+            android:id="@+id/adapter_todo_item_DeleteImageView"
+            android:cropToPadding="false" />
 
     </RelativeLayout>
 </android.support.v7.widget.CardView>
