--- a/app/src/main/res/layout/adapter_todo_item.xml
+++ b/app/src/main/res/layout/adapter_todo_item.xml
@@ -14,18 +14,17 @@
         android:padding="8dp">
 
         <TextView
-            android:text="TextView"
+            android:text="@string/textview"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:id="@+id/adapter_todo_item_TitleTextView"
             style="@style/TextAppearance.AppCompat.Medium"
             android:layout_toStartOf="@+id/adapter_todo_item_DeleteImageView"
-            android:elevation="1dp"
             android:ellipsize="end"
             android:textColor="#c3000000"/>
 
         <TextView
-            android:text="TextView"
+            android:text="@string/textview"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:id="@+id/adapter_todo_item_DescriptionTextView"
@@ -35,7 +34,7 @@
             android:layout_centerHorizontal="true" />
 
         <TextView
-            android:text="TextView"
+            android:text="@string/textview"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:id="@+id/adapter_todo_item_StatusTextView"
@@ -43,11 +42,12 @@
             android:layout_below="@+id/adapter_todo_item_DescriptionTextView"
             android:layout_alignParentStart="true"
             android:layout_marginTop="10dp"
-            android:textColor="#ce318f"/>
+            android:textColor="#ce318f" />
 
         <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:contentDescription="@string/remove_item"
             app:srcCompat="@android:drawable/ic_menu_delete"
             android:layout_alignParentTop="true"
             android:layout_alignParentEnd="true"
