--- a/purple/src/main/res/layout/activity_main.xml
+++ b/purple/src/main/res/layout/activity_main.xml
@@ -4,7 +4,7 @@
     android:id="@+id/activity_main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="app.purple.mvp.views.activities.MainActivity">
+    tools:context="app.purple.features.home.views.MainActivity">
 
     <android.support.v4.view.ViewPager
         android:layout_width="match_parent"
